# cad_conversion_api

./: .gitignore  LICENSE  README.md  Third-Party-Licenses.csv  docker-compose.yml
analyser_service/: Dockerfile  main.py  pyproject.toml
analyser_service/notebooks/: cad_query_dev.ipynb
analyser_service/src/analyser_service/: cad_stats.py
cad_service/: Dockerfile  main.py  pyproject.toml
cad_service/src/cad_service/services/: cad_conversion.py
client/: .gitignore  README.md  __init__.py  client.py  pyproject.toml  test_geo.npy  test_geo.stl  testpart.stl
client/config/: client.yaml
client/scripts/: example.py  example_usage.py  multiview_testdata.py  multiview_testdata_fabricad.py  test_api.py  test_rendering_service.py
client/src/client/: client.py  constants.py
client/src/client/config/: .env.example  config.py  config.yaml
client/testdata/: geometry_00000005.STEP
config/: client.yaml
converter_service/: Dockerfile  main.py  pyproject.toml
converter_service/src/converter_service/services/: cad_conversion.py
embedding_service/: Dockerfile  main.py  pyproject.toml
embedding_service/src/embedding_service/models/: bottleneck.py
embedding_service/src/embedding_service/services/: vecset.py
notebooks/: example_usage.ipynb
rendering_service/: .gitignore  Dockerfile  main.py
rendering_service/src/rendering_service/: __init__.py
rendering_service/src/rendering_service/services/: __init__.py  multiview_renderer.py
services/analyser_service/: Dockerfile  main.py  pyproject.toml
services/analyser_service/src/analyser_service/: cad_stats.py  complexity_metrics.py  drawing_views.py  metrics_processor.py
services/converter_service/: Dockerfile  main.py  pyproject.toml
services/converter_service/src/converter_service/services/: cad_conversion.py
services/embedding_service/: Dockerfile  main.py
services/embedding_service/src/embedding_service/models/: autoencoder.py  utils.py
services/embedding_service/src/embedding_service/services/: vecset.py
services/rendering_service/: Dockerfile  requirements.txt
services/rendering_service/src/rendering_service/services/: multiview_renderer.py
tmp/hub_files/analyser_service/: Dockerfile
tmp/hub_files/converter_service/: Dockerfile
tmp/hub_files/embedding_service/: Dockerfile
tmp/hub_files/rendering_service/: Dockerfile
vecset_service/: Dockerfile  main.py  pyproject.toml
vecset_service/src/vecset_service/services/: vecset.py
