[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cad-converter-client"
version = "1.0.0"
description = "Python client for CAD conversion services"
authors = [{name="Michel Kruse"}]
dependencies = [
    "requests>=2.31.0",
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]