[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "client"
version = "2.0.0"
description = "Python client for CAD Preprocessing API - Conversion, Embedding & Analysis"
authors = [{name="Michel Kruse"}]
dependencies = [
    "requests>=2.31.0",
    "pyyaml>=6.0",
    "ipykernel>=6.29.5",
    "numpy>=1.24.0",
]
requires-python = ">=3.8"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
