[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "vecset_service"
version = "0.1.0"
description = "service to infer the vecset encoder"
authors = [{name="Michel Kruse"}]
dependencies = [
    "fastapi",
    "uvicorn",
    "torch",
    "requests",
    "trimesh>=4.8.2",
    "mcubes",
    "numpy",
    "einops>=0.8.1",
]


[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
